--- a/distill/examples/index.html
+++ b/distill/examples/index.html
@@ -388,9 +388,10 @@ examples:  # examples modified from https://github.com/cjhutto/vaderSentiment
        judgments, entailment judgments, translation, dialogue), thus
        allowing us to rigorously test the sufficiency of a linguistic
        theory for explaining a particular phenomenon. Such work is not
-       in any sense new in linguistics, but we hope that the
-       high-performing Transformer architecture adds a valuable tool
-       now that we can understand what is going on inside of it.
+       in any sense new in linguistics, but we hope that
+       high-performing architectures from machine learning such as the
+       Transformer add a valuable tool now that we can understand what
+       is going on inside of them.
     </p>
 
     <a class="marker" href="#section-3.4" id="section-3.4"><span>3.4</span></a>
