positional embedding works now

--- a/distill/examples/index.html
+++ b/distill/examples/index.html
@@ -388,10 +388,11 @@ examples:  # examples modified from https://github.com/cjhutto/vaderSentiment
        judgments, entailment judgments, translation, dialogue), thus
        allowing us to rigorously test the sufficiency of a linguistic
        theory for explaining a particular phenomenon. Such work is not
-       in any sense new in linguistics, but we hope that
+       in any sense new in linguistics (see
+       e.g. <d-cite key="openccg"></d-cite>), but we hope that
        high-performing architectures from machine learning such as the
-       Transformer add a valuable tool now that we can understand what
-       is going on inside of them.
+       Transformer add a valuable tool now that we can write
+       interpretable transformers.
     </p>
 
     <a class="marker" href="#section-3.4" id="section-3.4"><span>3.4</span></a>
@@ -951,7 +952,8 @@ examples:
           const initTagPosAttention = figurePosAttention.querySelector("div");
           let layer = new HandSelfAttention(
               {program: `semes: red green blue apple banana cherry durian
-       det adjective noun conjunction xa
+       det adjective noun conjunction xa Ax Ay Bx By Cx Cy
+clocks: 0.1A 0.2B 0.3C # in radians per token
 keypos: +1
 querypos: 0
 keymat: 10adjective>xa 10det>det 10conjunction>conjunction 10det>adjective
