--- a/distill/examples/index.html
+++ b/distill/examples/index.html
@@ -997,7 +997,11 @@ examples:
 
     <p>
       In this section, we show a Transformer programmed to make
-      grammaticality judgments in English.
+      grammaticality judgments in English. This example is still in
+      the process of being translated from one description language to
+      another, and should not be expected to work. The full network
+      that worked on a decent number of examples is shown as a comment
+      in the code below.
     </p>
 
     <d-figure id="figure-grammaticality" style="border: 1px solid black">
@@ -2975,7 +2979,7 @@ examples:
 `,
                id: "figure-translation",
                topLevel: true,
-               document: '',
+               document: document,
                container: initTagTranslation});
       });
 
